--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,26 @@
 page-home {
-
+    .btn-mail{
+        color: #fff!important;
+        background-color: #007bb6!important;
+    }
+    .btn-google-plus{
+        color: #fff!important;
+        background-color: #dd4b39!important;
+    }
+    .btn-facebook{
+        color: #fff!important;
+        background-color: #3b5998!important;
+    }
+    .btn-linkedin{
+        color: #fff!important;
+        background-color: #007bb6!important;
+    }
+    .btn-youtube{
+        color: #fff!important;
+        background-color: #ff4b39!important;
+    }
+    .btn-twitter{
+        color: #fff!important;
+        background-color: #55acee!important;
+    }
 }
